refactor: 重构多个模块代码以提高可读性和可维护性
重构了多个模块的代码，包括：
1. 将大型函数拆分为更小的功能单元
2. 提取重复逻辑为独立方法
3. 优化条件判断和循环结构
4. 添加清晰的注释和方法说明
5. 统一代码风格和命名规范

主要重构模块包括：
- CSS生成器
- 文档转换器
- Markdown到DOCX转换器
- 双重解析引擎
- HTML到DOCX转换器
- HTML到Markdown转换器
- 样式提取器

同时优化了随机ID生成方式，使用crypto模块替代Math.random()提高安全性

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "doc-ops-mcp",
   "author": "Tele-AI",
   "version": "0.0.1",
-  "description": "Document Operations Multi-Channel Platform — A comprehensive platform for document processing, conversion, and automation",
+  "description": "MCP Document Converter Server — A Model Context Protocol server for seamless document format conversion and processing",
   "main": "dist/index.cjs",
   "license": "MIT",
   "scripts": {
@@ -56,7 +56,6 @@
     "playwright": "^1.53.1",
     "puppeteer": "^21.11.0",
     "safer-buffer": "^2.1.2",
-    "doc-ops-mcp": "^1.0.0",
     "turndown": "^7.2.0",
     "unzipper": "^0.12.3",
     "util": "^0.12.5",
@@ -109,8 +108,7 @@
     "document-automation",
     "ai",
     "llm",
-    "playwright",
-    "doc-ops-mcp"
+    "playwright"
   ],
   "homepage": "https://github.com/Tele-AI/doc-ops-mcp#readme",
   "repository": {
