feat(security): 增强文件路径处理安全性并添加安全配置
refactor: 重构路径处理逻辑使用安全路径函数
perf: 优化正则表达式处理防止ReDoS攻击
fix: 修复潜在路径遍历漏洞
ci: 更新Docker配置增强容器安全性
style: 移除生产环境调试输出

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - DAC_OVERRIDE
       - FOWNER
       # Removed SETGID and SETUID to prevent privilege escalation
+    tmpfs:
+      - /tmp:noexec,nosuid,size=100m  # Secure temporary filesystem
 
     # Environment variables
     environment:
@@ -81,6 +83,9 @@ services:
       - DAC_OVERRIDE
       - NET_BIND_SERVICE
       # Removed SETGID and SETUID to prevent privilege escalation
+    tmpfs:
+      - /tmp:noexec,nosuid,size=50m  # Secure temporary filesystem
+      - /var/cache/nginx:noexec,nosuid,size=50m  # Secure cache filesystem
     
     ports:
       - '127.0.0.1:8080:80'  # Bind to localhost only to prevent external exposure
