refactor: 重构错误处理和构建流程以提高安全性
重构错误处理逻辑，引入 SafeErrorHandler 类来安全处理敏感信息
优化构建脚本使用异步文件操作并添加安全限制
改进 Dockerfile 使用多阶段构建并减少镜像大小
更新 .dockerignore 文件结构以更好组织忽略规则

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,10 @@
+# Development files
+.env
+.env.*
+*.key
+*.pem
+*.crt
+
 # Dependencies
 node_modules/
 npm-debug.log*
@@ -8,13 +15,6 @@ pnpm-debug.log*
 # Build outputs
 dist/
 build/
-
-# Development files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # IDE files
 .vscode/
