feat: 减少PDF转换等待时间并添加中文字体支持
将浏览器等待时间从3秒减少到1秒以提高转换效率
添加fontkit依赖以支持中文字体嵌入，当检测到中文水印时尝试加载系统字体

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "@types/fontkit": "^2.0.8",
     "@types/marked": "^5.0.2",
     "cheerio": "^1.0.0-rc.12",
     "docx": "^9.5.1",
+    "fontkit": "^2.0.4",
     "jszip": "^3.10.1",
     "marked": "^15.0.12",
     "pdf-lib": "^1.17.1",
